--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = [d for d in loader if d.x.shape[0] == 135]"
+    "#loader = [d for d in loader if d.x.shape[0] == 135]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "graphs_h5/graph_AntiFlourite_Ra2O_r5.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_length = min([d.x.shape[0] for d in loader])\n",
+    "print(min_length)\n",
+    "for p in mol_paths:\n",
+    "    with h5py.File(p, 'r') as file:\n",
+    "        node_features = torch.tensor(file['node_attributes'][:], dtype=torch.float32) # Node attributes\n",
+    "    \n",
+    "        if node_features.shape[0] == 23:\n",
+    "            print(p)\n",
+    "            break"
    ]
   },
   {
