Added equivariant diffusion implementation

--- a/code/obsolete/data_exploration.ipynb
+++ b/code/obsolete/data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +77,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "loader = DataLoader([load_structure(path) for path in mol_paths], batch_size=1, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-5.0766, -5.0766, -2.5383],\n",
+      "        [-5.0766, -5.0766,  0.0000],\n",
+      "        [-5.0766, -5.0766,  2.5383],\n",
+      "        [-5.0766, -2.5383, -5.0766],\n",
+      "        [-5.0766,  0.0000, -5.0766],\n",
+      "        [-5.0766,  0.0000, -2.5383],\n",
+      "        [-5.0766, -2.5383,  0.0000],\n",
+      "        [-7.6149,  0.0000,  0.0000],\n",
+      "        [-5.0766,  0.0000,  0.0000],\n",
+      "        [-5.0766, -2.5383, -2.5383],\n",
+      "        [-5.0766,  0.0000,  2.5383],\n",
+      "        [-5.0766, -2.5383,  5.0766],\n",
+      "        [-5.0766,  0.0000,  5.0766],\n",
+      "        [-5.0766, -2.5383,  2.5383],\n",
+      "        [-5.0766,  2.5383, -5.0766],\n",
+      "        [-5.0766,  5.0766, -2.5383],\n",
+      "        [-5.0766,  2.5383,  0.0000],\n",
+      "        [-5.0766,  5.0766,  0.0000],\n",
+      "        [-5.0766,  2.5383, -2.5383],\n",
+      "        [-5.0766,  5.0766,  2.5383],\n",
+      "        [-5.0766,  2.5383,  5.0766],\n",
+      "        [-5.0766,  2.5383,  2.5383],\n",
+      "        [-2.5383, -5.0766, -5.0766],\n",
+      "        [ 0.0000, -5.0766, -5.0766],\n",
+      "        [ 0.0000, -5.0766, -2.5383],\n",
+      "        [ 0.0000, -7.6149,  0.0000],\n",
+      "        [-2.5383, -5.0766,  0.0000],\n",
+      "        [ 0.0000, -5.0766,  0.0000],\n",
+      "        [-2.5383, -5.0766, -2.5383],\n",
+      "        [ 0.0000, -5.0766,  2.5383],\n",
+      "        [-2.5383, -5.0766,  5.0766],\n",
+      "        [ 0.0000, -5.0766,  5.0766],\n",
+      "        [-2.5383, -5.0766,  2.5383],\n",
+      "        [ 0.0000,  0.0000, -7.6149],\n",
+      "        [ 0.0000, -2.5383, -5.0766],\n",
+      "        [-2.5383,  0.0000, -5.0766],\n",
+      "        [-2.5383, -2.5383, -5.0766],\n",
+      "        [ 0.0000,  0.0000, -5.0766],\n",
+      "        [-2.5383, -2.5383, -2.5383],\n",
+      "        [ 0.0000,  0.0000, -2.5383],\n",
+      "        [ 0.0000, -2.5383,  0.0000],\n",
+      "        [-2.5383,  0.0000,  0.0000],\n",
+      "        [-2.5383, -2.5383,  0.0000],\n",
+      "        [ 0.0000,  0.0000,  0.0000],\n",
+      "        [-2.5383,  0.0000, -2.5383],\n",
+      "        [ 0.0000, -2.5383, -2.5383],\n",
+      "        [-2.5383, -2.5383,  2.5383],\n",
+      "        [ 0.0000,  0.0000,  2.5383],\n",
+      "        [ 0.0000, -2.5383,  5.0766],\n",
+      "        [-2.5383,  0.0000,  5.0766],\n",
+      "        [-2.5383, -2.5383,  5.0766],\n",
+      "        [ 0.0000,  0.0000,  5.0766],\n",
+      "        [-2.5383,  0.0000,  2.5383],\n",
+      "        [ 0.0000, -2.5383,  2.5383],\n",
+      "        [ 0.0000,  0.0000,  7.6149],\n",
+      "        [ 0.0000,  2.5383, -5.0766],\n",
+      "        [-2.5383,  5.0766, -5.0766],\n",
+      "        [-2.5383,  2.5383, -5.0766],\n",
+      "        [ 0.0000,  5.0766, -5.0766],\n",
+      "        [-2.5383,  2.5383, -2.5383],\n",
+      "        [ 0.0000,  5.0766, -2.5383],\n",
+      "        [ 0.0000,  2.5383,  0.0000],\n",
+      "        [-2.5383,  5.0766,  0.0000],\n",
+      "        [-2.5383,  2.5383,  0.0000],\n",
+      "        [ 0.0000,  5.0766,  0.0000],\n",
+      "        [-2.5383,  5.0766, -2.5383],\n",
+      "        [ 0.0000,  2.5383, -2.5383],\n",
+      "        [-2.5383,  2.5383,  2.5383],\n",
+      "        [ 0.0000,  5.0766,  2.5383],\n",
+      "        [ 0.0000,  2.5383,  5.0766],\n",
+      "        [-2.5383,  5.0766,  5.0766],\n",
+      "        [-2.5383,  2.5383,  5.0766],\n",
+      "        [ 0.0000,  5.0766,  5.0766],\n",
+      "        [-2.5383,  5.0766,  2.5383],\n",
+      "        [ 0.0000,  2.5383,  2.5383],\n",
+      "        [ 0.0000,  7.6149,  0.0000],\n",
+      "        [ 2.5383, -5.0766, -5.0766],\n",
+      "        [ 5.0766, -5.0766, -2.5383],\n",
+      "        [ 2.5383, -5.0766,  0.0000],\n",
+      "        [ 5.0766, -5.0766,  0.0000],\n",
+      "        [ 2.5383, -5.0766, -2.5383],\n",
+      "        [ 5.0766, -5.0766,  2.5383],\n",
+      "        [ 2.5383, -5.0766,  5.0766],\n",
+      "        [ 2.5383, -5.0766,  2.5383],\n",
+      "        [ 5.0766, -2.5383, -5.0766],\n",
+      "        [ 2.5383,  0.0000, -5.0766],\n",
+      "        [ 2.5383, -2.5383, -5.0766],\n",
+      "        [ 5.0766,  0.0000, -5.0766],\n",
+      "        [ 2.5383, -2.5383, -2.5383],\n",
+      "        [ 5.0766,  0.0000, -2.5383],\n",
+      "        [ 5.0766, -2.5383,  0.0000],\n",
+      "        [ 2.5383,  0.0000,  0.0000],\n",
+      "        [ 2.5383, -2.5383,  0.0000],\n",
+      "        [ 5.0766,  0.0000,  0.0000],\n",
+      "        [ 2.5383,  0.0000, -2.5383],\n",
+      "        [ 5.0766, -2.5383, -2.5383],\n",
+      "        [ 2.5383, -2.5383,  2.5383],\n",
+      "        [ 5.0766,  0.0000,  2.5383],\n",
+      "        [ 5.0766, -2.5383,  5.0766],\n",
+      "        [ 2.5383,  0.0000,  5.0766],\n",
+      "        [ 2.5383, -2.5383,  5.0766],\n",
+      "        [ 5.0766,  0.0000,  5.0766],\n",
+      "        [ 2.5383,  0.0000,  2.5383],\n",
+      "        [ 5.0766, -2.5383,  2.5383],\n",
+      "        [ 5.0766,  2.5383, -5.0766],\n",
+      "        [ 2.5383,  5.0766, -5.0766],\n",
+      "        [ 2.5383,  2.5383, -5.0766],\n",
+      "        [ 2.5383,  2.5383, -2.5383],\n",
+      "        [ 5.0766,  5.0766, -2.5383],\n",
+      "        [ 5.0766,  2.5383,  0.0000],\n",
+      "        [ 2.5383,  5.0766,  0.0000],\n",
+      "        [ 2.5383,  2.5383,  0.0000],\n",
+      "        [ 5.0766,  5.0766,  0.0000],\n",
+      "        [ 2.5383,  5.0766, -2.5383],\n",
+      "        [ 5.0766,  2.5383, -2.5383],\n",
+      "        [ 2.5383,  2.5383,  2.5383],\n",
+      "        [ 5.0766,  5.0766,  2.5383],\n",
+      "        [ 5.0766,  2.5383,  5.0766],\n",
+      "        [ 2.5383,  5.0766,  5.0766],\n",
+      "        [ 2.5383,  2.5383,  5.0766],\n",
+      "        [ 2.5383,  5.0766,  2.5383],\n",
+      "        [ 5.0766,  2.5383,  2.5383],\n",
+      "        [ 7.6149,  0.0000,  0.0000],\n",
+      "        [-6.3458, -6.3458, -3.8075],\n",
+      "        [-6.3458, -6.3458,  1.2692],\n",
+      "        [-6.3458, -3.8075, -6.3458],\n",
+      "        [-8.8841, -1.2692, -1.2692],\n",
+      "        [-6.3458, -3.8075, -1.2692],\n",
+      "        [-6.3458, -1.2692, -3.8075],\n",
+      "        [-6.3458, -3.8075,  3.8075],\n",
+      "        [-6.3458, -1.2692,  1.2692],\n",
+      "        [-6.3458, -1.2692,  6.3458],\n",
+      "        [-6.3458,  1.2692, -6.3458],\n",
+      "        [-6.3458,  1.2692, -1.2692],\n",
+      "        [-6.3458,  3.8075, -3.8075],\n",
+      "        [-8.8841,  1.2692,  1.2692],\n",
+      "        [-6.3458,  1.2692,  3.8075],\n",
+      "        [-6.3458,  3.8075,  1.2692],\n",
+      "        [-6.3458,  3.8075,  6.3458],\n",
+      "        [-6.3458,  6.3458, -1.2692],\n",
+      "        [-6.3458,  6.3458,  3.8075],\n",
+      "        [-3.8075, -6.3458, -6.3458],\n",
+      "        [-3.8075, -6.3458, -1.2692],\n",
+      "        [-1.2692, -8.8841, -1.2692],\n",
+      "        [-1.2692, -6.3458, -3.8075],\n",
+      "        [-3.8075, -6.3458,  3.8075],\n",
+      "        [-1.2692, -6.3458,  1.2692],\n",
+      "        [-1.2692, -6.3458,  6.3458],\n",
+      "        [-3.8075, -1.2692, -6.3458],\n",
+      "        [-1.2692, -3.8075, -6.3458],\n",
+      "        [-1.2692, -1.2692, -8.8841],\n",
+      "        [-3.8075, -3.8075, -3.8075],\n",
+      "        [-3.8075, -1.2692, -1.2692],\n",
+      "        [-1.2692, -3.8075, -1.2692],\n",
+      "        [-1.2692, -1.2692, -3.8075],\n",
+      "        [-3.8075, -3.8075,  1.2692],\n",
+      "        [-3.8075, -1.2692,  3.8075],\n",
+      "        [-1.2692, -3.8075,  3.8075],\n",
+      "        [-1.2692, -1.2692,  1.2692],\n",
+      "        [-3.8075, -3.8075,  6.3458],\n",
+      "        [-1.2692, -1.2692,  6.3458],\n",
+      "        [-3.8075,  3.8075, -6.3458],\n",
+      "        [-1.2692,  1.2692, -6.3458],\n",
+      "        [-3.8075,  1.2692, -3.8075],\n",
+      "        [-3.8075,  3.8075, -1.2692],\n",
+      "        [-1.2692,  1.2692, -1.2692],\n",
+      "        [-1.2692,  3.8075, -3.8075],\n",
+      "        [-3.8075,  1.2692,  1.2692],\n",
+      "        [-3.8075,  3.8075,  3.8075],\n",
+      "        [-1.2692,  1.2692,  3.8075],\n",
+      "        [-1.2692,  3.8075,  1.2692],\n",
+      "        [-3.8075,  1.2692,  6.3458],\n",
+      "        [-1.2692,  1.2692,  8.8841],\n",
+      "        [-1.2692,  3.8075,  6.3458],\n",
+      "        [-1.2692,  6.3458, -6.3458],\n",
+      "        [-3.8075,  6.3458, -3.8075],\n",
+      "        [-1.2692,  6.3458, -1.2692],\n",
+      "        [-3.8075,  6.3458,  1.2692],\n",
+      "        [-1.2692,  6.3458,  3.8075],\n",
+      "        [-1.2692,  8.8841,  1.2692],\n",
+      "        [-3.8075,  6.3458,  6.3458],\n",
+      "        [ 1.2692, -6.3458, -6.3458],\n",
+      "        [ 1.2692, -6.3458, -1.2692],\n",
+      "        [ 3.8075, -6.3458, -3.8075],\n",
+      "        [ 1.2692, -8.8841,  1.2692],\n",
+      "        [ 1.2692, -6.3458,  3.8075],\n",
+      "        [ 3.8075, -6.3458,  1.2692],\n",
+      "        [ 3.8075, -6.3458,  6.3458],\n",
+      "        [ 1.2692, -1.2692, -6.3458],\n",
+      "        [ 3.8075, -3.8075, -6.3458],\n",
+      "        [ 1.2692, -3.8075, -3.8075],\n",
+      "        [ 1.2692, -1.2692, -1.2692],\n",
+      "        [ 3.8075, -3.8075, -1.2692],\n",
+      "        [ 3.8075, -1.2692, -3.8075],\n",
+      "        [ 1.2692, -3.8075,  1.2692],\n",
+      "        [ 1.2692, -1.2692,  3.8075],\n",
+      "        [ 3.8075, -3.8075,  3.8075],\n",
+      "        [ 3.8075, -1.2692,  1.2692],\n",
+      "        [ 1.2692, -3.8075,  6.3458],\n",
+      "        [ 1.2692, -1.2692,  8.8841],\n",
+      "        [ 3.8075, -1.2692,  6.3458],\n",
+      "        [ 1.2692,  1.2692, -8.8841],\n",
+      "        [ 1.2692,  3.8075, -6.3458],\n",
+      "        [ 3.8075,  1.2692, -6.3458],\n",
+      "        [ 1.2692,  1.2692, -3.8075],\n",
+      "        [ 1.2692,  3.8075, -1.2692],\n",
+      "        [ 3.8075,  1.2692, -1.2692],\n",
+      "        [ 3.8075,  3.8075, -3.8075],\n",
+      "        [ 1.2692,  1.2692,  1.2692],\n",
+      "        [ 1.2692,  3.8075,  3.8075],\n",
+      "        [ 3.8075,  1.2692,  3.8075],\n",
+      "        [ 3.8075,  3.8075,  1.2692],\n",
+      "        [ 1.2692,  1.2692,  6.3458],\n",
+      "        [ 3.8075,  3.8075,  6.3458],\n",
+      "        [ 3.8075,  6.3458, -6.3458],\n",
+      "        [ 1.2692,  6.3458, -3.8075],\n",
+      "        [ 1.2692,  8.8841, -1.2692],\n",
+      "        [ 3.8075,  6.3458, -1.2692],\n",
+      "        [ 1.2692,  6.3458,  1.2692],\n",
+      "        [ 3.8075,  6.3458,  3.8075],\n",
+      "        [ 1.2692,  6.3458,  6.3458],\n",
+      "        [ 6.3458, -6.3458, -1.2692],\n",
+      "        [ 6.3458, -6.3458,  3.8075],\n",
+      "        [ 6.3458, -1.2692, -6.3458],\n",
+      "        [ 6.3458, -3.8075, -3.8075],\n",
+      "        [ 6.3458, -1.2692, -1.2692],\n",
+      "        [ 6.3458, -3.8075,  1.2692],\n",
+      "        [ 6.3458, -1.2692,  3.8075],\n",
+      "        [ 8.8841, -1.2692,  1.2692],\n",
+      "        [ 6.3458, -3.8075,  6.3458],\n",
+      "        [ 6.3458,  3.8075, -6.3458],\n",
+      "        [ 6.3458,  1.2692, -3.8075],\n",
+      "        [ 6.3458,  3.8075, -1.2692],\n",
+      "        [ 8.8841,  1.2692, -1.2692],\n",
+      "        [ 6.3458,  1.2692,  1.2692],\n",
+      "        [ 6.3458,  3.8075,  3.8075],\n",
+      "        [ 6.3458,  1.2692,  6.3458],\n",
+      "        [ 6.3458,  6.3458, -3.8075],\n",
+      "        [ 6.3458,  6.3458,  1.2692]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in loader:\n",
+    "    print(s.x[:,4:])\n",
+    "    break"
    ]
   },
   {
