fixed adjecency matrix

--- a/code/obsolete/data_exploration.ipynb
+++ b/code/obsolete/data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,8 @@
     "import numpy as np\n",
     "import os\n",
     "import glob\n",
-    "from dataloader import SimpleGraphDataLoader"
+    "from dataloader import SimpleGraphDataLoader\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -51,6 +52,69 @@
    "source": [
     "mol_paths = glob.glob(\"/home/thomas/graph-diffusion-project/graphs_h5/*\")\n",
     "print(len(mol_paths))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n nodes 329\n",
+      "53956\n",
+      "108241\n",
+      "tensor([[  0,   0,   0,  ..., 327, 327, 328],\n",
+      "        [111, 124, 128,  ..., 316, 325, 104]])\n",
+      "tensor([[[ 0.0000,  3.0842,  3.0842,  ..., 13.1349, 12.5930, 12.5535],\n",
+      "         [ 3.0842,  0.0000,  5.0365,  ..., 10.7594, 10.0908, 10.6247],\n",
+      "         [ 3.0842,  5.0365,  0.0000,  ..., 12.9034, 12.3514, 11.7580],\n",
+      "         ...,\n",
+      "         [13.1349, 10.7594, 12.9034,  ...,  0.0000,  2.7681,  2.5245],\n",
+      "         [12.5930, 10.0908, 12.3514,  ...,  2.7681,  0.0000,  3.7463],\n",
+      "         [12.5535, 10.6247, 11.7580,  ...,  2.5245,  3.7463,  0.0000]]])\n",
+      "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        ...,\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.]])\n",
+      "1648\n",
+      "tensor([1.6951, 1.6970, 2.2685])\n",
+      "Counter({114: 7, 115: 7, 122: 7, 124: 7, 125: 7, 126: 7, 127: 7, 128: 7, 129: 7, 133: 7, 134: 7, 137: 7, 140: 7, 142: 7, 143: 7, 145: 7, 147: 7, 156: 7, 158: 7, 160: 7, 164: 7, 165: 7, 167: 7, 170: 7, 174: 7, 175: 7, 178: 7, 185: 7, 187: 7, 193: 7, 197: 7, 212: 7, 214: 7, 216: 7, 221: 7, 223: 7, 226: 7, 227: 7, 231: 7, 232: 7, 235: 7, 237: 7, 238: 7, 242: 7, 243: 7, 245: 7, 246: 7, 247: 7, 251: 7, 253: 7, 255: 7, 256: 7, 259: 7, 263: 7, 266: 7, 271: 7, 272: 7, 276: 7, 277: 7, 278: 7, 281: 7, 285: 7, 288: 7, 289: 7, 294: 7, 295: 7, 296: 7, 300: 7, 301: 7, 302: 7, 304: 7, 308: 7, 312: 7, 317: 7, 3: 6, 4: 6, 5: 6, 6: 6, 7: 6, 8: 6, 9: 6, 10: 6, 11: 6, 12: 6, 17: 6, 18: 6, 19: 6, 20: 6, 21: 6, 22: 6, 27: 6, 28: 6, 29: 6, 30: 6, 31: 6, 32: 6, 35: 6, 36: 6, 37: 6, 38: 6, 39: 6, 40: 6, 47: 6, 48: 6, 49: 6, 50: 6, 51: 6, 52: 6, 53: 6, 54: 6, 55: 6, 56: 6, 57: 6, 58: 6, 59: 6, 65: 6, 66: 6, 67: 6, 68: 6, 69: 6, 70: 6, 71: 6, 72: 6, 73: 6, 74: 6, 80: 6, 81: 6, 82: 6, 83: 6, 84: 6, 85: 6, 86: 6, 87: 6, 88: 6, 89: 6, 97: 6, 98: 6, 99: 6, 100: 6, 101: 6, 102: 6, 112: 6, 121: 6, 123: 6, 130: 6, 131: 6, 135: 6, 148: 6, 154: 6, 155: 6, 172: 6, 177: 6, 181: 6, 184: 6, 190: 6, 199: 6, 213: 6, 217: 6, 219: 6, 222: 6, 224: 6, 228: 6, 229: 6, 233: 6, 234: 6, 236: 6, 239: 6, 241: 6, 244: 6, 250: 6, 258: 6, 260: 6, 262: 6, 267: 6, 274: 6, 280: 6, 284: 6, 287: 6, 290: 6, 291: 6, 299: 6, 303: 6, 316: 6, 182: 5, 186: 5, 188: 5, 191: 5, 195: 5, 198: 5, 215: 5, 218: 5, 220: 5, 225: 5, 230: 5, 240: 5, 0: 4, 1: 4, 2: 4, 13: 4, 14: 4, 15: 4, 16: 4, 23: 4, 24: 4, 25: 4, 26: 4, 33: 4, 34: 4, 41: 4, 42: 4, 43: 4, 44: 4, 45: 4, 46: 4, 60: 4, 61: 4, 62: 4, 63: 4, 64: 4, 75: 4, 76: 4, 77: 4, 78: 4, 79: 4, 90: 4, 91: 4, 92: 4, 93: 4, 94: 4, 95: 4, 96: 4, 103: 4, 104: 4, 105: 4, 108: 4, 113: 4, 116: 4, 118: 4, 120: 4, 136: 4, 151: 4, 159: 4, 168: 4, 183: 4, 189: 4, 192: 4, 194: 4, 196: 4, 200: 4, 203: 4, 204: 4, 206: 4, 210: 4, 211: 4, 249: 4, 252: 4, 254: 4, 257: 4, 269: 4, 273: 4, 275: 4, 282: 4, 286: 4, 307: 4, 313: 4, 320: 4, 321: 4, 325: 4, 327: 4, 106: 3, 109: 3, 117: 3, 119: 3, 144: 3, 146: 3, 152: 3, 157: 3, 161: 3, 173: 3, 179: 3, 180: 3, 207: 3, 248: 3, 265: 3, 270: 3, 279: 3, 293: 3, 297: 3, 298: 3, 305: 3, 306: 3, 323: 3, 326: 3, 139: 2, 150: 2, 162: 2, 169: 2, 201: 2, 202: 2, 208: 2, 209: 2, 309: 2, 311: 2, 319: 2, 322: 2, 107: 1, 110: 1, 111: 1, 132: 1, 138: 1, 141: 1, 149: 1, 153: 1, 163: 1, 166: 1, 171: 1, 176: 1, 205: 1, 261: 1, 264: 1, 268: 1, 283: 1, 292: 1, 310: 1, 314: 1, 315: 1, 318: 1, 324: 1, 328: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in mol_paths:\n",
+    "    with h5py.File(p, 'r') as file:\n",
+    "        edge_features = torch.tensor(file['edge_attributes'][:], dtype=torch.float32) # Edge attributes\n",
+    "        edge_indices = torch.tensor(file['edge_indices'][:], dtype=torch.long) # Edge (sparse) adjecency matrix\n",
+    "        node_features = torch.tensor(file['node_attributes'][:], dtype=torch.float32) # Node attributes\n",
+    "\n",
+    "        n = node_features.shape[0]\n",
+    "        adjecency_matrix = torch.zeros((n, n))\n",
+    "        adjecency_matrix[edge_indices[0, :], edge_indices[1, :]] = edge_features\n",
+    "        adjecency_matrix[edge_indices[1, :], edge_indices[0, :]] = edge_features\n",
+    "\n",
+    "        xyz = node_features[:, 4:7]\n",
+    "        # calculate distance matrix\n",
+    "        xyz = xyz.unsqueeze(0)\n",
+    "        dist = torch.cdist(xyz, xyz)\n",
+    "\n",
+    "        print(\"n nodes\", n)\n",
+    "        print((n*(n-1)) // 2)\n",
+    "        print(n*n)\n",
+    "        print(edge_indices)\n",
+    "        print(dist)\n",
+    "        print(adjecency_matrix)\n",
+    "        print(len(adjecency_matrix[adjecency_matrix > 0]))\n",
+    "        print(edge_features.unique())\n",
+    "        print(Counter(edge_indices[0].numpy()))\n",
+    "        break"
    ]
   },
   {
@@ -781,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.7.16 (default, Jan 17 2023, 22:20:44) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
