--- a/code/obsolete/data_exploration.ipynb
+++ b/code/obsolete/data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,21 @@
    "metadata": {},
    "source": [
     "# Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(\"graphs_h5/graph_AntiFlourite_Ra2O_r5.h5\", 'r') as file:\n",
+    "        edge_features = torch.tensor(file['edge_attributes'][:], dtype=torch.float32) # Edge attributes\n",
+    "        edge_indices = torch.tensor(file['edge_indices'][:], dtype=torch.long) # Edge (sparse) adjecency matrix\n",
+    "        node_features = torch.tensor(file['node_attributes'][:], dtype=torch.float32) # Node attributes\n",
+    "\n",
+    "        xyz = node_features[:, 4:7]\n",
+    "        print(xyz.shape, xyz.max(), xyz.min())"
    ]
   },
   {
@@ -226,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16 (default, Jan 17 2023, 22:20:44) \n[GCC 11.2.0]"
+   "version": "3.7.16"
   },
   "orig_nbformat": 4,
   "vscode": {
