--- a/code/obsolete/data_exploration.ipynb
+++ b/code/obsolete/data_exploration.ipynb
@@ -38,11 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([23, 3]) tensor(5.3914) tensor(-5.3914)\n"
+     ]
+    }
+   ],
    "source": [
-    "with h5py.File(\"graphs_h5/graph_AntiFlourite_Ra2O_r5.h5\", 'r') as file:\n",
+    "with h5py.File(\"/home/thomas/graph-diffusion-project/graphs_h5/graph_AntiFlourite_Ra2O_r5.h5\", 'r') as file:\n",
     "        edge_features = torch.tensor(file['edge_attributes'][:], dtype=torch.float32) # Edge attributes\n",
     "        edge_indices = torch.tensor(file['edge_indices'][:], dtype=torch.long) # Edge (sparse) adjecency matrix\n",
     "        node_features = torch.tensor(file['node_attributes'][:], dtype=torch.float32) # Node attributes\n",
