--- a/code/obsolete/data_exploration.ipynb
+++ b/code/obsolete/data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,27 +39,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([135, 3]) tensor(8.9856) tensor(-8.9856)\n",
+      "torch.Size([135, 3]) tensor(8.9856) tensor(-8.9856) torch.Size([135, 7])\n",
       "torch.Size([9045]) tensor(20.3321) tensor(3.1127)\n"
      ]
     }
    ],
    "source": [
-    "data_path = \"/Users/rasmus/Library/CloudStorage/OneDrive-UniversityofCopenhagen/Skole/kandidat/2. Semester/Graph Diffusion Project/graph-diffusion-project/graphs_fixed_num_135/AntiFlourite_Ra2O.h5\"\n",
+    "data_path = \"/home/thomas/graph-diffusion-project/graphs_fixed_num_135/AntiFlourite_Ra2O.h5\"\n",
     "with h5py.File(data_path, 'r') as file:\n",
     "        edge_features = torch.tensor(file['edge_attributes'][:], dtype=torch.float32) # Edge attributes\n",
     "        edge_indices = torch.tensor(file['edge_indices'][:], dtype=torch.long) # Edge (sparse) adjecency matrix\n",
     "        node_features = torch.tensor(file['node_attributes'][:], dtype=torch.float32) # Node attributes\n",
     "\n",
     "        xyz = node_features[:, 4:7]\n",
-    "        print(xyz.shape, xyz.max(), xyz.min())\n",
+    "        print(xyz.shape, xyz.max(), xyz.min(), node_features.shape)\n",
     "        dists = torch.tensor(pdist(xyz, metric='euclidean'), dtype=torch.float32)\n",
     "        print(dists.shape, dists.max(), dists.min())"
    ]
@@ -549,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.16"
   },
   "orig_nbformat": 4,
   "vscode": {
