--- a/code/obsolete/data_exploration.ipynb
+++ b/code/obsolete/data_exploration.ipynb
@@ -39,6 +39,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_atoms = 8\n",
+    "xyz = torch.tensor([[-1, -1, -1], [-1, -1, 1], [-1, 1, -1],\n",
+    "                    [-1, 1, 1], [1, -1, -1], [1, -1, 1],\n",
+    "                    [1, 1, -1], [1, 1, 1]], dtype=torch.float32)\n",
+    "node_features = torch.zeros((8, 7))\n",
+    "node_features[:, 4:7] = xyz\n",
+    "r = torch.zeros(3000)\n",
+    "pdf = torch.zeros(3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 0., 0.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xyz.mean(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([28]), tensor(3.4641))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dists = torch.tensor(pdist(xyz, metric='euclidean'), dtype=torch.float32)\n",
+    "dists.shape, dists.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
