--- a/code/obsolete/data_exploration.ipynb
+++ b/code/obsolete/data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,8 @@
     "import glob\n",
     "from dataloader import SimpleGraphDataLoader\n",
     "from collections import Counter\n",
-    "from scipy.spatial.distance import pdist"
+    "from scipy.spatial.distance import pdist\n",
+    "import pickle"
    ]
   },
   {
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -780,6 +781,17 @@
     "    if g.x.shape[0] == 23:\n",
     "        print(p)\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open pickle \"rwps.pkl\"\n",
+    "with open(\"rwps.pkl\", \"rb\") as f:\n",
+    "    rwps = pickle.load(f)"
    ]
   }
  ],
